# drebedengi-python-api

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  dev.yml  preview.yml  release.yml
changelog/: index.html
contributing/: index.html
docs/: gen_ref_pages.py  installation.md  usage.md
drebedengi/: __init__.py  api.py  model.py  utils.py
installation/: index.html
reference/SUMMARY/: index.html
reference/drebedengi/: index.html
reference/drebedengi/api/: index.html
reference/drebedengi/model/: index.html
reference/drebedengi/utils/: index.html
search/: search_index.json
src/drebedengi/: __init__.py  model.py
tests/: __init__.py  test_drebedengi.py
usage/: index.html
wsdl/: dd.wsdl
