[tool.poetry]
name = "drebedengi-python-api"
version = "0.1.0"
homepage = "https://github.com/mishamsk/drebedengi-python-api"
description = "Python wrapper for Drebedengi SOAP API."
authors = ["Mike Perlov <mishamsk@gmail.com>"]
readme = "README.md"
license =  "GPL-3.0-only"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "drebedengi" },
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
zeep = "^4.1.0"
attrs = "^22.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
bump2version = "^1.0.1"
pre-commit = "^2.20.0"
twine = "^4.0.1"
tox = "^3.25.1"
types-requests = "^2.28.8"
mkdocs = {version = "^1.3.1"}
mkdocs-include-markdown-plugin = {version = "^3.6.1"}
mkdocs-material-extensions = {version = "^1.0.3"}
mkdocs-material = {version = "^8.3.9"}
mkdocstrings = {version = "^0.19.0", extras = ["python"]}
mkdocs-section-index = {version = "^0.3.4"}
mkdocs-literate-nav = {version = "^0.4.1"}
mkdocs-gen-files = {version = "^0.3.5"}
mkdocs-exclude = {version = "^1.0.2"}
mkdocs-autorefs = {version = "^0.4.1"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--basetemp=testtemp"

[tool.coverage.run]
omit = ["*/test/*", "**/conftest.py"]

[tool.coverage.report]
omit = ["*/test/*"]
exclude_lines = [
    "pragma: no cover",
    "@abstractmethod",
    "@abc.abstractmethod",
    "def __repr__",
    "if .*DEBUG",
    "raise AssertionError",
    "raise NotImplementedError"
    ]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_typing="typing"
sections= ["FUTURE","STDLIB","FIRSTPARTY","THIRDPARTY","LOCALFOLDER","TYPING"]
# skip files
#skip_glob = docs/conf.py
[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
